--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <!-- Placeholder div -->
     <div class="chart-container"></div>
 
-    <script src="http://d3js.org/d3.v3.min.js"></script>
+    <script src="d3.js"></script>
     <script src="chartRenderer.js"></script>
     <script>
         let options = {
