Implemented onWindowResire re-drawing event handler

--- a/index.html
+++ b/index.html
@@ -77,6 +77,11 @@
             chart.update();
         });
 
+        // On window resize event
+        window.addEventListener('resize', function() {
+            chart.resize();
+        });
+
     </script>
 </body>
 </html>
